Revision history for Perl extension Email-Sender-Transport-Mailgun

{{$NEXT}}

0.04 2022-06-23T02:01:20Z

    - need HTTP::Tiny >= 0.037 for apikey encoding

0.03 2022-06-19T22:58:43Z

    - fix documentation links (#3)
    - encode reserved chars in apikey (#5)
    - removed obsolete campaign attribute (#6)

0.02 2019-11-27T01:34:18Z

    - support for Mailgun regions (fhelmberger)

0.01 2016-09-28T06:38:43Z

    - original version
